<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="number_test">01</string>
    <string name="shake">Shake</string>
    <string name="version_updating">Version</string>
    <string name="user_prize_wall">我的徽章</string>
    <string name="error_storage_permission">"请打开存储权限，否则无法下载文件到SD卡"</string>
    <string name="exit_edit"> Do you want to exit the edit mode? </string>
    <string name="shenzhen">深圳</string>
    <string name="spit">小雨</string>
    <string name="cumulative_badge">累计10h徽章</string>
    <string name="current_version">Current version</string>
    <string name="latest_version">Latest version</string>
    <string name="new_version_introduced">New version features</string>
    <string name="new_version">New version</string>
    <string name="download">Download</string>
    <string name="mobile_network">A mobile network will be used for downloading</string>
    <string name="update_size">218MB</string>
    <string name="flux_continue">Do you want to continue?</string>
    <string name="continue_download">Yes</string>
    <string name="downloading_now">Downloading…</string>
    <string name="install">Install</string>
    <string name="update_now">Installing, please wait…</string>
    <string name="is_lastest_verison">The latest version is downloaded V</string>
    <string name="install_experience">，and ready for installation！</string>
    <string name="download_background">Continue downloading updates in the background</string>
    <string name="mozhi_version">MoBest\nv1.0.1</string>
    <string name="update"> Update </string>
    <string name="no_network">Network error， please try again later</string>
    <string name="failed_load">Network error. Try again later.</string>
    <string name="network_anomaly">Loading error, please try again later</string>
    <string name="token_invalid">Your session has expired, please log in again</string>
    <string name="updated_the_style_of_the_clock">更新了时钟的样式，重新调整了系统的代码逻辑，极大减少了闪退的概率\n\n将日程作为一个新的页面，可根据需要选择是否添加，给你更多自由空间</string>
    <string name="update_date">2017年1月30日</string>
    <string name="update_details">更新了时钟的样式，重新调整了系统的代码逻辑，极大减少了闪退的概率\n\n将日程作为一个新的页面，可根据需要选择是否添加，给你更多自由空间更新了时钟的样式，重新调整了系统的代码逻辑更新了时钟的样式，重新调整了系统的代码逻辑更新了时钟的样式，重新调整了系统的代码逻辑更新了时钟的样式，重新调整了系统的代码逻辑更新了时钟的样式，重新调整了系统的代码逻辑更新了时钟的样式，重新调整了系统的代码逻辑更新了时钟的样式，重新调整了系统的代码逻辑更新了时钟的样式，重新调整了系统的代码逻辑更新了时钟的样式，重新调整了系统的代码逻辑</string>
    <string name="do_not_have_system_permissions">未获得系统权限，安装失败</string>
    <string name="install_succeed">安装成功，请等待软件重启</string>
    <string name="install_failed">安装失败，请稍后重试</string>
    <string name="SDCardError">SD卡异常，无法下载到SD卡</string>
    <string name="checking_version_info">正在检查版本信息…</string>
    <string name="n_n">N - N℃</string>
    <string name="RMB">¥</string>
    <string name="step_count">0</string>
    <string name="v1_0_1">V1.0.1</string>
    <string name="v1_02_15_6mb">V1.02 15.6MB</string>
    <string name="test_99">99</string>
    <string name="n">N℃</string>
    <string name="fine">Sunny</string>
    <string name="cloudy">Cloudy</string>
    <string name="overcast">Overcast</string>
    <string name="sandstorm">Sandstorm</string>
    <string name="fog">Fog</string>
    <string name="haze">Haze</string>
    <string name="thunder_shower">T-shower</string>
    <string name="rainstorm">Rainstorm</string>
    <string name="moderate_rain">Moderate rain</string>
    <string name="sleet">Sleet</string>
    <string name="snowstorm">Snowstorm</string>
    <string name="heavy_snow">Heavy snow</string>
    <string name="moderate_snow">Moderate snow</string>
    <string name="light_snow">Light snow</string>
    <string name="heavy_rain">Heavy rain</string>
    <string name="light_rain">Light rain</string>
    <string name="choose_reader">Please select the contents you like</string>
    <string name="hint">Tap \"Panels setup\" on  \"Me\" panel\nto customise them</string>
    <string name="btn_access">Allow</string>
    <string name="btn_deny">deny</string>
    <string name="network_access_description">墨知屏集成了同花顺、商业周刊、界面新闻、墨知、微信、今天、日程、QQ阅读、掌阅阅读、咪咕阅读，使用过程中，需要获取读取短信、读取彩信、拍照与录像、录音、开关移动网络、开关WLAN、开关蓝牙、获取地理位置、读取联系人、新建/修改联系人、删除联系人、读取日程、写入日程、读取外部存储，写入外部存储权限，是否允许？</string>
    <string name="do_not_ask_again">Never ask again</string>
    <string name="no_longer_tips">Never remaind</string>
    <string name="permission_wechat">微信申请以下权限：\n\n 访问互联网，将产生流量、开关WLAN、获取地理位置、读取联系人、新建/修改联系人、删除联系人、录音、读取短信、拍照与录像、录音、开关WLAN、开关蓝牙、获取地理位置</string>
    <string name="permission_jiemian_news">界面新闻申请以下权限：\n\n访问互联网，将产生流量、开关WLAN、获取地理位置</string>
    <string name="permission_qq_reader">QQ阅读申请以下权限：\n\n访问互联网，将产生流量、拍照与录像、录音、开关移动网络、获取地理位置、开关WLAN、开关蓝牙</string>
    <string name="permission_ir_reader">掌阅阅读申请以下权限：\n\n访问互联网，将产生流量、开关移动网络、开关WLAN、发送短信、发送彩信、读取短信、读取彩信、拍照与录像、录音</string>
    <string name="permission_tonghuashun">同花顺申请以下权限：\n\n访问互联网，将产生流量、拍照与录像、录音、开关移动网络、开关WLAN、开关蓝牙、获取地理位置</string>
    <string name="permission_news_syzk">商业周刊申请以下权限：\n\n访问互联网，将产生流量、开关WLAN、获取地理位置</string>
    <string name="permission_reader_migu">咪咕阅读申请以下权限：\n\n访问互联网，将产生流量、读取联系人、发送短信、发送彩信、读取短信、读取彩信、拍照与录像、录音、开关移动网络、开关WLAN、获取地理位置</string>
    <string name="app_name">Launcher</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="time_colon">:</string>
    <string name="click_retry">Retry</string>
    <string name="no_data">No data…</string>
    <string name="base_loading">Loading…</string>
    <string name="permission_mozhi">MoZhi screen requires access to the following permission(s): Internet, Location, Read SMS, Calendar. Allow?</string>
    <string name="wechat_title">WeChat</string>
    <string name="wechat">WeChat</string>
    <string name="wechat_friend">Moments</string>
    <string name="wechat_subscribe">Subscriptions</string>
    <string name="wechat_collection">Favorites</string>
    <string name="kindle_home">Home</string>
    <string name="kindle_store">Store</string>
    <string name="kindle_reading">Reading</string>
    <string name="we_chat_service">WeChatNotificationListenerService</string>
    <string name="user_desk_manger">Panels setup</string>
    <string name="user_setting">App Settings</string>
    <string name="notification_manager">Notice Manager</string>
    <string name="setting">Settings</string>
    <string name="pure_lock_screen">\"Today\" panel</string>
    <string name="pure_lock_screen_des">Lock screen will display time, weathers \nand steps.</string>
    <string name="lock_screen_notification">Lock screen notifications</string>
    <string name="wechat_mail_message_setting">Show WeChat and SMS notifications on the \nlock screen</string>
    <string name="lock_screen_encrypt">Lock screen security </string>
    <string name="lock_screen_encrypt_des">Sync system lock screen security settings</string>
    <string name="prep_picture">Please preset a picture in the gallery of color screen</string>
    <string name="select_photo">Set a picture as  MoShake in the gallery of color screen.</string>
    <string name="unlock_after_shake_out_weChat_card">Shake-out the preset picture within 10 secs \nafter unlocking ,such like WeChat QR Code</string>
    <string name="tips_tap_to_wake">Double-tap on the screen to wake device</string>
    <string name="title_tap_to_wake">Double-tap to wake</string>
    <string name="des_kids_mode">Color screen will be disabled, the function \nof internet and telephone answering will \nbe kept</string>
    <string name="title_kids_mode">Kids mode</string>
    <string name="setting_wallpaper_push">Lock screen push</string>
    <string name="setting_wallpaper_push_desc">Daily push of wonderful content</string>
    <string name="kis_cannot_open">Please long press the power key to quit reading mode first</string>
    <string name="kis_mode_hit_diglog">This operation will disable color screen. The function of internet and telephone answering will be kept.</string>
    <string name="known">Got it</string>
    <string name="screen_clock_locker">Lock screen clock</string>
    <string name="screen_clock_locker_desc">Power saving after closing the lock clock</string>
    <string name="today">Today</string>
    <string name="todo">Todo</string>
    <string name="moBest">MoBest</string>
    <string name="tonghuashun">Hithink Stocks</string>
    <string name="shangzhou">Business news</string>
    <string name="jingdong">JingDongReader</string>
    <string name="jiemian">News</string>
    <string name="qqreader">QQbook</string>
    <string name="ireader">IReader</string>
    <string name="migu">CMRead</string>
    <string name="kindle">kindle</string>
    <string name="moai">MoAI</string>
    <string name="music">Music</string>
    <string name="curriculum">Curriculum</string>
    <string name="stcard">学生证</string>
    <string name="debug_test_title">JustForDevTest</string>
    <string name="home_screen">Home</string>
    <string name="set_home_screen">Set Home</string>
    <string name="remind_permission">Unable to read a schedule</string>
    <string name="user_need_login">Not logged in</string>
    <string name="user_null">Not set</string>
    <string name="rookie">Rookie</string>
    <string name="silver">Silver</string>
    <string name="gold">Gold</string>
    <string name="platinum">Platinum</string>
    <string name="diamond">Diamond</string>
    <string name="complete_the_information">Information completed, 20 growth points added</string>
    <string name="curren_score">Current growth points:</string>
    <string name="user_menu_title">Personal center</string>
    <string name="mocard">MyVIP</string>
    <string name="my_interests">My interests</string>
    <string name="user_account_cash_left">My wallet</string>
    <string name="feedback">Feedback</string>
    <string name="about_mobest">About MoBest</string>
    <string name="log_out">Log out</string>
    <string name="save_success"> Saved </string>
    <string name="exit_success">Log out</string>
    <string name="exit_ok_or_not">Log out?</string>
    <string name="complete_information">Award 20 growth points after completing the information</string>
    <string name="page">" badges"</string>
    <string name="trunk">" badges"</string>
    <string name="nickname_no_empty">Nickname can not be blank</string>
    <string name="save_preparing">Saving•••</string>
    <string name="user_personal_title">Personal information</string>
    <string name="user_personal_head">Photo</string>
    <string name="user_personal_nickname">Nickname</string>
    <string name="user_personal_sex">Gender</string>
    <string name="user_personal_birth">Birthday</string>
    <string name="user_personal_work">Profession</string>
    <string name="user_personal_area">Location</string>
    <string name="user_personal_reading_hobby">Reading preferences</string>
    <string name="user_format_birthday">MM yyyy</string>
    <string name="user_sex_male">Male</string>
    <string name="user_sex_female">Female</string>
    <string name="the_internet">Internet</string>
    <string name="occupations_finance">Finance</string>
    <string name="occupations_medical">Medicine</string>
    <string name="occupations_estate">Construction</string>
    <string name="occupations_education">Education</string>
    <string name="occupations_maker">Manufacture</string>
    <string name="occupations_media">Media</string>
    <string name="occupations_government">Government</string>
    <string name="occupations_it">IT</string>
    <string name="reading_hobby_reading">Novels</string>
    <string name="usefull_tools">快捷菜单</string>
    <string name="touch">手电筒</string>
    <string name="save_mode">省电模式</string>
    <string name="normal_clock">经典时钟</string>
    <string name="nomal_mode">响铃模式</string>
    <string name="lock_setting">锁屏加密</string>
    <string name="clean_up">清理加速</string>
    <string name="twodimension_code">二维码</string>
    <string name="sos">SOS</string>
</resources>