<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_kindle"
    android:clickable="true"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/main_page_title_width"
        android:layout_height="@dimen/main_page_title_height"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitXY"
        android:src="@drawable/kindle_title" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_58"
        android:layout_marginTop="@dimen/padding_20"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_30"
        android:paddingRight="@dimen/padding_30">

        <TextView
            android:id="@+id/fragment_kindle_launcher"
            style="@style/KindleBottomTv"
            android:drawableTop="@drawable/icon_kindle_home"
            android:text="@string/kindle_home" />

        <TextView
            android:id="@+id/fragment_kindle_shopping_cart"
            style="@style/KindleBottomTv"
            android:drawableTop="@drawable/icon_kindle_shopping_cart"
            android:text="@string/kindle_store" />

        <TextView
            android:id="@+id/fragment_kindle_reading"
            style="@style/KindleBottomTv"
            android:drawableTop="@drawable/icon_kindle_reading"
            android:text="@string/kindle_reading" />

    </LinearLayout>

</LinearLayout>
