<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingBottom="70dp"
             android:paddingLeft="20dp"
             android:paddingRight="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_black_rect_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_large"
            android:layout_marginRight="@dimen/padding_large"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/network_access_description"
            android:textColor="@color/black"
            android:textSize="@dimen/font_16"/>

        <LinearLayout
            android:id="@+id/dialog_not_ask_again_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_large"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_large"
            android:paddingRight="@dimen/padding_large">

            <ImageView
                android:id="@+id/dialog_not_ask_again_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_network_license_cb"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding"
                android:text="@string/do_not_ask_again"
                android:textColor="@color/white_38"
                android:textSize="@dimen/font_16"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/padding"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_network_cancel_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/margin_x_xlarge"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/btn_deny"
                android:textColor="@color/white_68"
                android:textSize="@dimen/font_16"/>

            <TextView
                android:id="@+id/dialog_network_access_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/margin_x_xlarge"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/btn_access"
                android:textColor="@color/black"
                android:textSize="@dimen/font_16"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>