<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_wechat"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/main_page_title_width"
            android:layout_height="@dimen/main_page_title_height"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitXY"
            android:src="@drawable/wechat_title" />


        <com.android.xthink.ink.launcherink.common.view.VerticalFlippingView
            android:id="@+id/fragment_wechat_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_weight="1"
            android:orientation="vertical">

        </com.android.xthink.ink.launcherink.common.view.VerticalFlippingView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_58"
            android:layout_marginTop="@dimen/padding_20"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_15"
            android:paddingRight="@dimen/padding_15">

            <TextView
                android:id="@+id/fragment_wechat_launcher"
                style="@style/WeChatBottomTv"
                android:drawableTop="@drawable/icon_wechat"
                android:text="@string/wechat" />

            <TextView
                android:id="@+id/fragment_wechat_subscribe"
                style="@style/WeChatBottomTv"
                android:drawableTop="@drawable/icon_wechat_subscribe"
                android:text="@string/wechat_subscribe" />

            <TextView
                android:id="@+id/fragment_wechat_friend"
                style="@style/WeChatBottomTv"
                android:drawableTop="@drawable/icon_wechat_moments"
                android:text="@string/wechat_friend" />

            <TextView
                android:id="@+id/fragment_wechat_collection"
                style="@style/WeChatBottomTv"
                android:drawableTop="@drawable/icon_wechat_favorite"
                android:text="@string/wechat_collection" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_wechat_simple_msg_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/fragment_wechat_simple_msg_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_x_small"
            android:textColor="@color/white"
            android:textSize="@dimen/font_20"
            tools:text="hahahahaah" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1.05" />

    </LinearLayout>


</FrameLayout>